[tool.poetry]
name = "streamlit-csv-seeder"
version = "0.1.0"
description = ""
authors = ["Akash Mangalore <akashmworks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.37.1"
mimesis = "^17.0.0"
pydash = "^8.0.3"


[tool.poetry.dev-dependencies]
watchdog = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["bkf_pos_management.types.DF"]

[tool.ruff.lint.isort]
known-first-party = ["frappe*", "erpnext"]
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]


[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
